--- a/eTickets/eTickets/Views/Producers/Create.cshtml
+++ b/eTickets/eTickets/Views/Producers/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model Actor
+﻿@model Producer
 
 @{
-    ViewData["Title"] = "Add a new actor";
+    ViewData["Title"] = "Add a new producer";
 }
 
 <div class="row-text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a New Actor</h1>
+            <h1>Add a New Producer</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -44,7 +44,14 @@
 
 @section Scripts{
 
-    <script>$("#ProfilePictureURL").on("change", function () {
+    <script>
+
+        $(document).ready(function () {
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $("#ProfilePictureURL").val();
+        })
+
+        $("#ProfilePictureURL").on("change", function () {
             var output = document.getElementById('ProfilePicturePreview');
             output.src = $(this).val();
         })</script>
