--- a/eTickets/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/eTickets/Views/Producers/Index.cshtml
@@ -29,7 +29,7 @@
                             @Html.DisplayFor(modelItem => item.FullName)
                         </td>
                         <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Bio) 
+                            @Html.DisplayFor(modelItem => item.Bio)
                         </td>
                         <td class="align-middle">
                             <a class="btn btn-outline-primary text-white"><i class="bi bi-pencil-square"></i> Edit</a>|
@@ -41,4 +41,8 @@
             </tbody>
         </table>
     </div>
+</div>
+
+<div style="position:fixed; right:25px; bottom:25px" class="text-white">
+    <a asp-controller="Producers" asp-action="Create" class="btn btn-success">Create Producer</a>
 </div>
