--- a/eTickets/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/eTickets/Views/Cinemas/Index.cshtml
@@ -41,3 +41,7 @@
         </table>
     </div>
 </div>
+
+<div style="position:fixed; right:25px; bottom:25px" class="text-white">
+    <a asp-controller="Cinemas" asp-action="Create" class="btn btn-success">Add Cinema</a>
+</div>
