--- a/eTickets/eTickets/Views/Producers/Edit.cshtml
+++ b/eTickets/eTickets/Views/Producers/Edit.cshtml
@@ -1,20 +1,22 @@
 ﻿@model Producer
 
 @{
-    ViewData["Title"] = "Add a new producer";
+    ViewData["Title"] = "Update producer";
 }
 
-<div class="row-text">
+<div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a New Producer</h1>
+            <h1>Update Actor</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create">
+                <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input asp-for="Id" hidden />
+
                     <div class="form-group text-center">
-                        <img id="ProfilePicturePreview" />
+                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
                     <div class="form-group">
                         <label asp-for="ProfilePictureURL" class="control-label"></label>
@@ -33,25 +35,20 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-primary float-right" />
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
+                        <input type="submit" value="Update" class="btn btn-outline-success float-right" />
+                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 </form>
-              
             </div>
         </div>
     </div>
 </div>
 
 @section Scripts{
-
-    <script>
-
-        $(document).ready(function () {
+    <script>$(document).ready(function () {
             var output = document.getElementById('ProfilePicturePreview');
             output.src = $("#ProfilePictureURL").val();
         })
-
         $("#ProfilePictureURL").on("change", function () {
             var output = document.getElementById('ProfilePicturePreview');
             output.src = $(this).val();
