--- a/eTickets/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/eTickets/Views/Producers/Index.cshtml
@@ -32,9 +32,9 @@
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary text-white"><i class="bi bi-pencil-square"></i> Edit</a>|
-                            <a class="btn btn-outline-info text-white"><i class="bi bi-eye"></i> Edit</a>|
-                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Edit</a>
+                            <a class="btn btn-outline-primary text-white" asp-controller="Producers" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit</a>|
+                            <a class="btn btn-outline-info text-white" asp-controller="Producers" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> Details</a>|
+                            <a class="btn btn-danger text-white" asp-controller="Producers" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i> Delete</a>
                         </td>
                     </tr>
                 }
