--- a/eTickets/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/eTickets/Views/Cinemas/Index.cshtml
@@ -8,7 +8,7 @@
 @*Write code*@
 
 <div class="row">
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-10 offset-md-1">
         <table class="table">
             <thead>
                 <tr>
@@ -32,8 +32,8 @@
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary text-white"><i class="bi bi-pencil-square"></i> Edit</a>|
-                            <a class="btn btn-outline-info text-white"><i class="bi bi-eye"></i> View</a>|
+                            <a class="btn btn-primary text-white" asp-controller="Cinemas" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit</a>|
+                            <a class="btn btn-info text-white" asp-controller="Cinemas" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> View</a>
                          </td>
                     </tr>
                 }
