--- a/eTickets/Views/Actors/Index.cshtml
+++ b/eTickets/Views/Actors/Index.cshtml
@@ -42,7 +42,4 @@
         </table>
     </div>
 </div>
-
-<div style="position:fixed; right:25px; bottom:25px" class="text-white">
-    <a asp-controller="Actors" asp-action="Create" class="btn btn-success">Create Event</a>
-</div>
+@await Html.PartialAsync("_CreateItem", "Actors") 
