--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -7,10 +7,10 @@
 
 @*Write code*@
 
-<div class="row">   
-                @foreach (var item in Model)
-                {
-                    <div class="col-md-4 col-xs-6 border-primary mb-3">
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4 col-xs-6 border-primary mb-3">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-12">
@@ -42,9 +42,10 @@
                                 else if (DateTime.Now > item.EndDate)
                                 {
                                     <span class="badge bg-danger text-white">EXPIRED</span>
-                                } else
+                                }
+                                else
                                 {
-                                <span class="badge bg-primary text-white">UPCOMING</span>
+                                    <span class="badge bg-primary text-white">UPCOMING</span>
                                 }
                             </p>
 
@@ -61,5 +62,7 @@
                 </div>
             </div>
         </div>
-                }
+    }
 </div>
+
+@await Html.PartialAsync("_CreateItem", "Movies") 
