--- a/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/Views/Producers/Index.cshtml
@@ -43,6 +43,4 @@
     </div>
 </div>
 
-<div style="position:fixed; right:25px; bottom:25px" class="text-white">
-    <a asp-controller="Producers" asp-action="Create" class="btn btn-success">Create Producer</a>
-</div>
+@await Html.PartialAsync("_CreateItem", "Producers") 
