--- a/eTickets/Views/Cinemas/Index.cshtml
+++ b/eTickets/Views/Cinemas/Index.cshtml
@@ -15,7 +15,11 @@
                     <th>@Html.DisplayNameFor(model => model.Logo)</th>
                     <th>@Html.DisplayNameFor(model => model.Name)</th>
                     <th>@Html.DisplayNameFor(model => model.Description)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -31,10 +35,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
-                        <td class="align-middle">
-                            <a class="btn btn-primary text-white" asp-controller="Cinemas" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit</a>|
-                            <a class="btn btn-info text-white" asp-controller="Cinemas" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> View</a>
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-primary text-white" asp-controller="Cinemas" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit</a>|
+                                <a class="btn btn-info text-white" asp-controller="Cinemas" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> View</a>
+                            </td>
+                        }
+
                     </tr>
                 }
             </tbody>
